--- a/MobilePervasive.oneMile/app/src/main/res/layout/infowindow.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/infowindow.xml
@@ -8,12 +8,13 @@
 
     <TextView
         android:id="@+id/marker_title"
+        android:textStyle="bold"
         android:layout_width="200dp"
-        android:layout_height="50dp" />
-
+        android:layout_height="wrap_content" />
+<!--
     <TextView
         android:id="@+id/marker_snippet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
+-->
 </LinearLayout>
