add buttons to popUpWindows and let the buttons work to display the toasts. add address display and user response. fix the "location remain stable" bug. change the radius of the circle.

--- a/MobilePervasive.oneMile/app/src/main/res/values/styles.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/values/styles.xml
@@ -1,8 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
+    <!--
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+         Customize your theme here.
+        </style>
+    -->
+    <style name="PopupAnimation"
+        parent="android:Animation"
+        mce_bogus="1">
+        <item name="android:windowEnterAnimation">@anim/popup_enter</item>
+        <item name="android:windowExitAnimation">@anim/popup_exit</item>
     </style>
-
 </resources>
