--- a/MobilePervasive.oneMile/app/src/main/res/layout/post_input.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/post_input.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/NewPostEditView"
-        android:layout_gravity="center_horizontal|top"
+        android:layout_gravity="top"
         android:layout_weight="0.1" />
 
     <Button
