--- a/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
@@ -11,26 +11,37 @@
     android:layout_height="450dp"
     android:id="@+id/map" tools:context=".MapsActivity" />
 
-    <Button
-        android:id="@+id/marker_something_new"
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:text="Something New?"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/map" />
+        android:layout_below="@+id/map"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp" >
 
-    <Button
-        android:id="@+id/refresh"
-        android:layout_width="195dp"
-        android:layout_height="wrap_content"
-        android:text="exploring now!"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/map" />
+        <Button
+            android:id="@+id/marker_something_new"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:text="Something New?"
+            android:clickable="true"
+            android:layout_gravity="center_horizontal"
+
+             />
+
+        <Button
+            android:id="@+id/refresh"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="exploring now!"
+            android:clickable="true"
+            android:layout_gravity="center_horizontal"
+
+             />
+    </LinearLayout>
 
 </RelativeLayout>
