--- a/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
@@ -46,8 +46,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             fab:fab_plusIconColor="@color/half_black"
-            fab:fab_colorNormal="@color/blue"
-            fab:fab_colorPressed="@color/white_pressed"
+            fab:fab_colorNormal="@color/blue_semi_transparent"
+            fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="16dp"
