add button features, more beautiful than ever

--- a/MobilePervasive.oneMile/app/src/main/res/values/styles.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/values/styles.xml
@@ -12,7 +12,7 @@
         <item name="android:windowEnterAnimation">@anim/popup_enter</item>
         <item name="android:windowExitAnimation">@anim/popup_exit</item>
     </style>
-    <style name="Theme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <style name="AppTheme" parent="@android:style/Theme.Translucent">
         <item name="android:textViewStyle">@style/theme_textview_style</item>
     </style>
 
