--- a/MobilePervasive.oneMile/app/src/main/res/layout/taste.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/taste.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="#99000000">
@@ -30,7 +31,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
-
+<!--
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -39,16 +40,39 @@
         android:src="@drawable/likeadd"
         android:layout_alignTop="@+id/report"
         android:layout_alignLeft="@+id/show_something"
-        android:clickable="true" />
+        android:clickable="true" /> -->
 
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/like"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        fab:fab_icon="@drawable/ic_action_star"
+        fab:fab_colorNormal="@color/pink"
+        fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
+        android:layout_alignTop="@+id/report"
+        android:layout_alignStart="@+id/show_something"/>
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/dontcare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+
+        fab:fab_icon="@drawable/ic_action_delete"
+        fab:fab_colorNormal="@color/pink"
+        fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
+        android:layout_alignTop="@+id/report"
+        android:layout_centerHorizontal="true"/>
+<!--
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:scaleType="fitXY"
         android:id="@+id/dontcare"
-        android:src="@drawable/dontcarenew"
+        android:src="@drawable/ic_action_delete"
         android:layout_alignTop="@+id/report"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true" /> -->
+    <!--
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -56,6 +80,17 @@
         android:id="@+id/report"
         android:src="@drawable/warn"
         android:layout_below="@+id/show_something"
-        android:layout_alignEnd="@+id/show_something" />
+        android:layout_alignEnd="@+id/show_something" /> -->
 
+    <com.getbase.floatingactionbutton.FloatingActionButton
+        android:id="@+id/report"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+
+        fab:fab_icon="@drawable/ic_action_warning"
+        fab:fab_colorNormal="@color/pink"
+        fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
+        android:layout_below="@+id/show_something"
+        android:layout_alignEnd="@+id/show_something"/>
 </RelativeLayout>
