--- a/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
+++ b/MobilePervasive.oneMile/app/src/main/res/layout/activity_maps.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentBottom="true"
 
             fab:fab_icon="@drawable/ic_action_refresh"
-            fab:fab_colorNormal="@color/pink"
+            fab:fab_colorNormal="@color/blue_semi_transparent"
             fab:fab_colorPressed="@color/blue_semi_transparent_pressed"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
